--- a/app/views/properties/_form.html.erb
+++ b/app/views/properties/_form.html.erb
@@ -12,31 +12,31 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :property_name %>
+    <%= form.label :property_name, "物件名" %>
     <%= form.text_field :property_name %>
   </div>
 
   <div class="field">
-    <%= form.label :rent %>
+    <%= form.label :rent, "賃料" %>
     <%= form.number_field :rent %>
   </div>
 
   <div class="field">
-    <%= form.label :address %>
+    <%= form.label :address, "住所" %>
     <%= form.text_field :address %>
   </div>
 
   <div class="field">
-    <%= form.label :age %>
+    <%= form.label :age, "築年齢" %>
     <%= form.number_field :age %>
   </div>
 
   <div class="field">
-    <%= form.label :note %>
+    <%= form.label :note, "備考" %>
     <%= form.text_area :note %>
   </div>
 
   <div class="actions">
-    <%= form.submit %>
+    <%= form.submit "登録する" %>
   </div>
 <% end %>
