--- a/app/views/properties/show.html.erb
+++ b/app/views/properties/show.html.erb
@@ -25,5 +25,20 @@
   <%= @property.note %>
 </p>
 
-<%= link_to '編集', edit_property_path(@property) %> |
+  <h3>最寄り駅</h3>
+  <p>
+    <strong>路線名</strong>
+    <%= @closest_stations.route_name %>
+  </p>
+  <p>
+    <strong>駅名</strong>
+    <%= @closest_stations.station_name %>
+  </p>
+  <p>
+    <strong>徒歩分数</strong>
+    <%= @closest_stations.walk_minutes %>
+  </p>
+
+<%= link_to '編集', edit_property_path(@property) %> 
 <%= link_to '戻る', properties_path %>
+
